--- a/src/Pages/products.css
+++ b/src/Pages/products.css
@@ -1,8 +1,9 @@
 
 .products-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Adjust column width as needed */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
     grid-gap: 20px;
+    position:relative;
   }
   
   .product-card {
@@ -16,22 +17,22 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
-  /* In your .css or .scss file */
+ 
 .card {
   border: none;
   border-top: 50px;
-  max-width: 15rem; /* Adjust the maximum width as needed */
+  max-width: 15rem;
 }
 
 .card-image-container {
-  height: 150px; /* Adjust the height as needed */
+  height: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .card-image {
-  max-height: 100%;
+  height: 100%;
   max-width: 100%;
   object-fit: contain;
 }
@@ -47,3 +48,7 @@
   border-top: 20px !important ;
 
 }
+.container{
+  position:relative;
+}
+  
